<resources>
    <string name="app_name">Games</string>
    <string name="login_text">Login</string>
    <string name="welcome_message">Welcome!</string>
    <string name="description_text">With our app will be much easier to keep the control of your games!</string>
    <string name="edit_email_hint">E-mail</string>
    <string name="edit_password_hint">Password</string>
    <string name="check_remember_me">Remember me</string>
    <string name="login_button_text">Enter</string>
    <string name="text_signup">Create an account</string>
    <string name="copyright_message">Developed by DS2M</string>
    <string name="text_new_account">New account</string>
    <string name="text_choose_photo">Let\'s choose a photo?</string>
    <string name="text_autentication_datas">Autentication datas</string>
    <string name="text_personal_datas">Personal datas</string>
    <string name="edit_name_hint">What\'s your name?</string>
    <string name="edit_city_hint">What\'s your city</string>
    <string name="edit_birthdate_hint">Birth date</string>
    <string name="text_gamer_level">What\'s your gamer level?</string>
    <string name="gamer_level">Casual</string>
    <string name="text_favorite_console">What\'s your favorite console?</string>
    <string name="text_gender_selection">Sex:</string>
    <string name="gender_male">Masculine</string>
    <string name="gender_female">Feminine</string>
    <string name="text_username">User Name</string>
    <string name="text_user_email">example123@gmail.com</string>
    <string name="text_finished_games_label">Finished Games</string>
    <string name="text_currently_play_label">Currently Playing</string>
    <string name="text_age_label">Age</string>
    <string name="text_exhibited_level">Exhibited Level</string>
    <string name="text_menu_exit">Exit</string>
    <string name="text_registered_games">Your registered games</string>
    <string name="add_new_game">Add a new Game to your list!</string>
    <string name="form_company_name">Company name</string>
    <string name="form_game_name">Game name</string>
    <string name="insert_company_name_hint">Insert the company name</string>
    <string name="insert_game_name_hint">Insert the game name</string>
    <string name="form_game_description">Insert a short description</string>
    <string name="insert_short_description_hint">Insert a short description about the game</string>
    <string name="form_release_date">Release date</string>
    <string name="insert_release_date_hint">Insert the release date</string>
    <string name="form_finished_game">Have you finished this game already?</string>
    <string name="finished_yes_option">Yes</string>
    <string name="finished_no_option">No</string>
    <string name="save_button">Save</string>

    <string-array name="consoles">
        <item>Playstation 5</item>
        <item>Xbox Series S/X</item>
        <item>Nintendo Switch</item>
        <item>Playstation 4</item>
        <item>Xbox One</item>
        <item>Nintendo 64</item>
        <item>Playstation 3</item>
        <item>Xbox 360</item>
        <item>Atari</item>
        <item>Playstation 2</item>
        <item>PC</item>
    </string-array>
</resources>