<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.NewGameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/copyright_message"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/add_new_game"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/new_game_form_background"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/form_finished_game"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextDate2"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/form_release_date"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/form_game_description"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/form_game_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/new_game_form_input_background"
            android:ems="10"
            android:hint="@string/insert_game_name_hint"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_company_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/new_game_form_input_background"
            android:ems="10"
            android:hint="@string/insert_company_name_hint"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/new_game_form_input_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/insert_short_description_hint"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:singleLine="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <EditText
            android:id="@+id/editTextDate2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/new_game_form_input_background"
            android:ems="10"
            android:hint="@string/insert_release_date_hint"
            android:inputType="date"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView22"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/textView23">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:buttonTint="@color/white"
                android:text="@string/finished_yes_option"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/finished_no_option"
                android:textColor="@color/white" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/submit_button_background"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>