<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_signup"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text_new_account"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer_signup"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/footer_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_signup">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:srcCompat="@drawable/ic_person" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_photo"
                android:drawableTint="@color/terciary_color"
                android:text="@string/text_choose_photo"
                android:textColor="@color/terciary_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawableTint="@color/terciary_color"
                android:text="@string/text_autentication_datas"
                android:textColor="@color/terciary_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawableTint="@color/terciary_color"
                android:text="@string/text_personal_datas"
                android:textColor="@color/terciary_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

            <EditText
                android:id="@+id/editTextTextEmailAddress3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/edit_email_hint"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/text_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/edit_password_hint"
                android:inputType="textPassword"
                android:textColorHint="@color/text_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress3"
                app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress3"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/edit_name_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/text_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword3"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/edit_city_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/text_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/edit_birthdate_hint"
                android:inputType="date"
                android:textColorHint="@color/text_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

            <TextView
                android:id="@+id/text_gamer_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_gamer_level"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="@+id/editTextDate"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_gamer_level"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginEnd="32dp"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="100"
                app:layout_constraintEnd_toStartOf="@+id/textview_gamer_level"
                app:layout_constraintStart_toStartOf="@id/text_gamer_level"
                app:layout_constraintTop_toBottomOf="@id/text_gamer_level" />

            <TextView
                android:id="@+id/textview_gamer_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/gamer_level"
                android:textColor="@color/primary_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/slider_gamer_level"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/slider_gamer_level"
                app:layout_constraintTop_toTopOf="@+id/slider_gamer_level" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_favorite_console"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="@+id/slider_gamer_level"
                app:layout_constraintTop_toBottomOf="@+id/slider_gamer_level" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/text_gender_selection"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:clipChildren="false"
                android:entries="@array/consoles"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/text_color"
                    android:paddingEnd="16dp"
                    android:text="@string/gender_male"
                    android:textColor="@color/text_color" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/text_color"
                    android:text="@string/gender_female"
                    android:textColor="@color/text_color" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>